--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "npm run watch && nodemon dist/index.js",
     "start": "node dist/index.js",
     "start2": "ts-node src/index.ts",
-    "dev2": "nodemon --exec ts-node src/index.ts",
+    "dev2": "nodemon --exec ts-node --files src/index.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "keywords": [],
@@ -19,26 +19,30 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/node": "^16.6.1",
-    "@types/redis": "^2.8.31",
+    "@types/uuid": "^8.3.1",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
     "@types/cors": "^2.8.12",
+    "@types/nodemailer": "^6.4.4",
     "apollo-server-express": "^3.1.2",
     "argon2": "^0.28.2",
     "connect-redis": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "graphql": "^15.5.1",
     "graphql-scalars": "^1.10.0",
+    "ioredis": "^4.27.8",
+    "nodemailer": "^6.6.3",
     "pg": "^8.7.1",
-    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.1.8",
     "type-graphql": "^1.1.1",
-    "typeorm": "^0.2.37"
+    "typeorm": "^0.2.37",
+    "uuid": "^8.3.2"
   }
 }
